Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -94,7 +94,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "la_boca = neightb"
+    "la_boca = neightborhoods[-1]"
    ]
   },
   {
@@ -126,7 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ba_latitude = None"
+    "ba_latitude = coor"
    ]
   },
   {
