--- a/index.ipynb
+++ b/index.ipynb
@@ -126,7 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ba_latitude = coor"
+    "ba_latitude = coordinates[0]"
    ]
   },
   {
@@ -135,7 +135,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ba_longitude = None"
+    "ba_longitude = coordinates[-1]"
    ]
   },
   {
